--- a/website/scss/imports/theme.scss
+++ b/website/scss/imports/theme.scss
@@ -52,8 +52,6 @@ body {
 .content-container {
   padding: 0;
   border-radius: 5px;
-  //background-color: $background-color;
-  //box-shadow: 0 4px 0 #b39d7a;
   margin: 0 auto;
 }
 
@@ -109,6 +107,7 @@ section.central-section {
 }
 
 .section-header {
+  @extend .unselectable;
   white-space: nowrap;
   z-index: 20;
   position: absolute;
