--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,386 +1,1 @@
-@import "imports/variables", "imports/functions", "imports/responsive", "imports/form", "imports/theme";
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-h1, h2, h3, h4, h5 {
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: 36px;
-}
-
-ul {
-  &.no-bullets {
-    list-style-type: none;
-    //margin: 0;
-    //padding: 0;
-  }
-}
-
-
-.fully-hidden {
-  position: absolute;
-  visibility: hidden;
-}
-
-//$background: #ECECEC;
-//
-//$color-1-background: #90CCF4;
-//$color-2-background: #F3D250;
-//$color-3-background: #F78888;
-//$color-5: #5DA2D5;
-//$border-spacing: 2vw;
-//
-//body {
-//  background: $background;
-//  margin: 0;
-//  display: flex;
-//  flex-direction: column;
-//  font-family: 'Maven Pro', sans-serif;
-//  overflow: hidden;
-//  height: 100vh;
-//}
-//
-//nav {
-//  position: absolute;
-//  left: 0;
-//  right: 0;
-//  top: -100px;
-//  z-index: 1;
-//  background-color: $icon-background;
-//  display: flex;
-//  padding: 28px 2em;
-//  border-bottom: 2px solid #fff;
-//  color: $nav-color;
-//  font-size: 1.4em;
-//  font-weight: 400;
-//
-//  .nav-buttons {
-//    flex: 1 1 calc((100vw - 180px) / 2);
-//
-//    &.righted {
-//      text-align: right;
-//    }
-//
-//    a {
-//      @extend .unselectable;
-//      cursor: pointer;
-//      text-decoration: none;
-//      color: $nav-color;
-//
-//      &:hover {
-//        color: #9b9b96;
-//      }
-//
-//      &:not(:first-child) {
-//        margin-left: 1.5em;
-//      }
-//    }
-//  }
-//
-//  .nav-icon {
-//    flex: 0 0 180px;
-//    opacity: 0;
-//
-//    &:after {
-//      position: absolute;
-//      height: 13px;
-//      width: 179px;
-//      top: 73px;
-//      background-color: $icon-background;
-//      content: '';
-//      z-index: 40;
-//      margin-left: 2px;
-//    }
-//  }
-//}
-//
-//#platforms {
-//
-//  .list {
-//    margin: 0 0 22px;
-//
-//    div {
-//      display: flex;
-//      margin: 0 0 4px;
-//
-//      > h2 {
-//        flex: 0 0 100px;
-//        font-size: 1.2em;
-//        margin: 0;
-//        text-align: center;
-//      }
-//
-//      > div {
-//        flex: 1 1 auto;
-//      }
-//    }
-//  }
-//
-//  #platform-list .meter span {
-//    background-color: $color-1-background;
-//  }
-//}
-//
-//#full-nav {
-//  position: fixed;
-//  z-index: 100;
-//}
-//
-//#personal-skills .list {
-//  text-align: center;
-//
-//  p {
-//    background-color: $color-2-background;
-//    padding: 4px 6px;
-//    border-radius: 8px;
-//    font-weight: 600;
-//    margin: 4px 4px;
-//    display: inline-block;
-//  }
-//}
-//
-//#content {
-//  height: 100vh;
-//  //background-color: $color-3-background;
-//  margin-top: 100vh;
-//  overflow: auto;
-//  padding: 3em;
-//  visibility: hidden;
-//
-//  section {
-//    //height: 60vh;
-//    margin-top: 3em;
-//
-//    .panel {
-//      padding: 2em;
-//      //background-color: #5DA2D5;
-//      width: 40vw;
-//    }
-//  }
-//}
-//
-//footer {
-//  p {
-//    //font-size: 16px;
-//    line-height: 1.5em;
-//    text-align: right;
-//    letter-spacing: 0.08em;
-//    text-transform: uppercase;
-//    font: bold 16px sofia-pro, sans-serif;
-//  }
-//}
-//
-//.cs-1 {
-//  background-color: $color-1-background;
-//}
-//
-//.cs-2 {
-//  background-color: $color-2-background;
-//}
-//
-//.cs-3 {
-//  background-color: $color-3-background;
-//}
-//
-//
-//#landing-page {
-//  cursor: pointer;
-//  width: 100vw;
-//  height: 100vh;
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//
-//  #main-title {
-//    height: 180px;
-//    text-align: right;
-//    top: 50%;
-//    left: calc(50% - 180px);
-//    position: absolute;
-//    transform: translate(-50%, -50%);
-//
-//    h1 {
-//      font-size: 2.5em;
-//      margin: 0 42px 0 0;
-//    }
-//
-//    h2 {
-//      margin: 0 60px 0 0;
-//    }
-//  }
-//
-//  #main-information {
-//    height: 180px;
-//    top: 50%;
-//    left: calc(50% + 200px);
-//    position: absolute;
-//    transform: translate(-50%, -50%);
-//  }
-//}
-//
-//.unselectable {
-//  user-select: none;
-//  -moz-user-select: none;
-//  -webkit-user-select: none;
-//}
-//
-//#skills .skill-list {
-//  margin-left: -0.5em;
-//  text-align: center;
-//
-//  .skill {
-//    width: 120px;
-//    display: inline-block;
-//    margin: 0 0.5em;
-//
-//    .circle-progress-bar {
-//      width: 120px;
-//      height: 120px;
-//    }
-//
-//    h2 {
-//      margin-top: 0;
-//      text-align: center;
-//    }
-//  }
-//}
-//
-//.section-title {
-//  display: flex;
-//  margin-bottom: 12px;
-//
-//  i {
-//    width: 1.6em;
-//    height: 1.6em;
-//    line-height: 1.6em;
-//    border-radius: 100%;
-//    text-align: center;
-//    font-size: 1.4em;
-//    color: #000;
-//    background-color: $color-3-background;
-//    flex: 0 0 1.6em;
-//  }
-//
-//  h1 {
-//    margin: auto 10px;
-//    display: inline-block;
-//    flex: 0 0 auto;
-//  }
-//
-//  hr {
-//    border: 0;
-//    border-top: 2px solid $color-3-background;
-//    display: inline-block;
-//    flex: 1 1 auto;
-//    margin: auto;
-//  }
-//}
-//
-//.achievement {
-//  display: flex;
-//  margin: 10px 8px;
-//
-//  &:before {
-//    content: '•';
-//    font-size: 50px;
-//    display: inline-block;
-//    flex: 0 0 10px;
-//    margin: auto;
-//    height: 24px;
-//    line-height: 24px;
-//    color: $color-3-background;
-//    z-index: 1;
-//  }
-//
-//  > div {
-//    display: inline-block;
-//    flex: 1 1 auto;
-//    border-left: 2px solid #000;
-//    margin-left: -12px;
-//    padding-left: 12px;
-//    border-radius: 8px;
-//
-//    h2 {
-//      margin: 0;
-//      font-size: 1.2em;
-//    }
-//
-//    p {
-//      margin: 0;
-//    }
-//  }
-//}
-//
-//#personal-skills, #platforms, #achievements {
-//  max-width: 500px;
-//}
-//
-//#languages .list {
-//
-//  text-align: center;
-//
-//  .language {
-//    max-width: 200px;
-//    text-align: center;
-//    display: inline-block;
-//    margin: 0 12px;
-//
-//    img {
-//      width: 120px;
-//      height: 120px;
-//    }
-//
-//    p {
-//      margin: 0;
-//      font-weight: 700;
-//    }
-//  }
-//}
-//
-///***********************
-//*      FLEX-BOXES      *
-//************************/
-//#flex-box-2 {
-//  display: flex;
-//  flex-direction: row;
-//
-//  #about {
-//    flex: 1 1 auto;
-//  }
-//
-//  #skills {
-//    flex: 0 1 600px;
-//  }
-//}
-//
-//#flex-box-34 {
-//  display: flex;
-//  flex-direction: row;
-//
-//  #flex-box-3 {
-//    flex: 1 1 auto;
-//  }
-//
-//  #flex-box-4 {
-//    flex: 0 1 500px;
-//  }
-//}
-//
-//
-//#flex-box-3 {
-//  display: flex;
-//  flex-direction: column;
-//}
-//
-//#flex-box-4 {
-//  display: flex;
-//  flex-direction: column;
-//}
+@import "imports/defaults", "imports/responsive", "imports/form", "imports/theme";
