adds initial work on education section

--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,1 +1,1 @@
-@import "imports/defaults", "imports/responsive", "imports/form", "imports/theme";
+@import "imports/defaults", "imports/responsive", "imports/timeline", "imports/form", "imports/theme";
