--- a/website/scss/imports/theme.scss
+++ b/website/scss/imports/theme.scss
@@ -116,9 +116,8 @@ section.central-section {
   padding: 15px 25px 15px 50px;
 
   &.big-header {
-    padding: 15px;
+    padding: 15px 100px;
     text-align: center;
-    width: 60%;
     text-transform: uppercase;
     text-shadow: 0 2px 0 #000;
     color: $dark;
