--- a/website/scss/imports/timeline.scss
+++ b/website/scss/imports/timeline.scss
@@ -1,3 +1,6 @@
+$border-radius-large: 400px;
+$border-radius: 88px;
+$border-radius-small: 50px;
 
 .main-timeline {
   font-family: tahoma;
@@ -13,7 +16,7 @@
   background-color: #e7e7e7;
   border-radius: 50%;
   border: 10px solid #303334;
-  transform: translatex(-50%);
+  transform: translateX(-50%);
   position: absolute;
   left: 50%;
   top: -15px;
@@ -38,7 +41,7 @@
   content: "";
   height: 100%;
   width: 50%;
-  border-radius: 110px 0 0 110px;
+  border-radius: $border-radius-large 0 0 $border-radius-large;
   border: 16px solid #46b2bc;
   border-right: none;
   position: absolute;
@@ -69,20 +72,9 @@
 .main-timeline .timeline-year-tag {
   position: relative;
   flex: 1 1 50%;
-  display: flex;
+  margin: auto 0;
   padding: 0 50px;
-}
-
-$icon-width: 80px;
-
-.main-timeline .timeline-year-outer {
-  position: relative;
-  flex: 1 1 calc(100% - #{$icon-width});
-}
-
-.main-timeline .timeline-icon-outer {
-  position: relative;
-  flex: 0 0 80px;
+  text-align: center;
 }
 
 
@@ -91,24 +83,15 @@ $icon-width: 80px;
   color: #65c7d0;
   font-size: 50px;
   font-weight: 600;
-  display: inline-block;
-  transform: translatey(-50%);
-  position: absolute;
-  top: 50%;
   letter-spacing: -0.04em;
-  width: 100%;
+  display: block;
+  margin-top: -8px;
   text-align: center;
-  padding: 0 20px;
 }
 
 .main-timeline .timeline-icon {
-  @include apply-transform(translate(-50%, -50%));
   color: #65c7d0;
   font-size: 70px;
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
 }
 
 .main-timeline .content {
@@ -125,18 +108,17 @@ $icon-width: 80px;
   font-size: 20px;
   font-weight: 600;
   text-transform: uppercase;
-  margin: 0 0 5px 0;
 }
 
 .main-timeline .description {
   font-size: 16px;
-  margin: 0;
+  margin: 8px 0 0;
 }
 
 .main-timeline .timeline:nth-child(even)::before {
   left: auto;
   right: 0;
-  border-radius: 0 110px 110px 0;
+  border-radius: 0 $border-radius-large $border-radius-large 0;
   border: 15px solid red;
   border-left: none;
 }
@@ -144,7 +126,7 @@ $icon-width: 80px;
 .main-timeline .timeline:nth-child(even)::after {
   left: auto;
   right: 12px;
-  border-radius: 0 100px 100px 0;
+  border-radius: 0 $border-radius-large $border-radius-large 0;
   border: 15px solid green;
   border-left: none;
 }
@@ -154,15 +136,7 @@ $icon-width: 80px;
 }
 
 .main-timeline .timeline:nth-child(even) .timeline-year-tag {
-  //left: auto;
   order: 1;
-  //right: 10%;
-}
-
-.main-timeline .timeline:nth-child(even) .timeline-icon-outer {
-  //left: auto;
-  //right: 32%;
-  order: -1;
 }
 
 .main-timeline .timeline:nth-child(5n+1)::before {
@@ -213,8 +187,7 @@ $icon-width: 80px;
   border-color: #6CAF29;
 }
 
-.main-timeline .timeline:nth-child(5n+3) .timeline-icon
-{
+.main-timeline .timeline:nth-child(5n+3) .timeline-icon {
   color: #8CC63E;
 }
 
@@ -266,87 +239,121 @@ $icon-width: 80px;
   color: #0071BD;
 }
 
-@media screen and (max-width:1200px){
-  .main-timeline .timeline:after{ border-radius: 88px 0 0 88px; }
-  .main-timeline .timeline:nth-child(even):after{ border-radius: 0 88px 88px 0; }
-  .main-timeline .timeline-icon{ font-size: 60px; }
-  .main-timeline .timeline-year{
-    font-size: 40px;
-  }
-  .main-timeline .timeline-year-tag{
-    padding: 0;
+@media screen and (max-width: 1200px) {
+  .main-timeline {
+
+    // Manage the border roundness with screen width.
+    .timeline:after {
+      border-radius: $border-radius 0 0 $border-radius;
+    }
+
+    .timeline:before {
+      border-radius: calc(#{$border-radius} + 10px) 0 0 calc(#{$border-radius} + 10px);
+    }
+
+    .timeline:nth-child(even):after {
+      border-radius: 0 $border-radius $border-radius 0;
+    }
+
+    .timeline:nth-child(even):before {
+      border-radius: 0 calc(#{$border-radius} + 10px) calc(#{$border-radius} + 10px) 0;
+    }
+
+    // Manage year and icons
+    .timeline-icon {
+      font-size: 60px;
+    }
+
+    .timeline-year {
+      font-size: 40px;
+    }
+
+    .timeline-year-tag {
+      padding: 0;
+    }
   }
 }
-@media screen and (max-width:767px){
 
-  .main-timeline:before {
-    top:-10px;
-  }
+@media screen and (max-width: 767px) {
 
-  .main-timeline:after {
-    bottom:10px;
-  }
 
-  .main-timeline .timeline{ margin-top: -19px; }
-  .main-timeline .timeline:before {
-    border-radius: 50px 0 0 50px;
-    border-width: 10px;
+  .main-timeline {
+    // Timeline position
+    &:before {
+      top: -10px;
+    }
+
+    &:after {
+      bottom: 10px;
+    }
+
+    .timeline {
+      margin-top: -19px;
+    }
+
+    // Manage the border roundness with screen width.
+    .timeline:after {
+      border-radius: $border-radius-small 0 0 $border-radius-small;
+      border-width: 10px;
+      height: calc(100% - 18px);
+      width: calc(50% - 9px);
+      top: 9px;
+      left: 9px;
+    }
+
+    .timeline:before {
+      border-radius: calc(#{$border-radius-small} + 10px) 0 0 calc(#{$border-radius-small} + 10px);
+      border-width: 10px;
+    }
+
+    .timeline:nth-child(even):after {
+      border-radius: 0 $border-radius-small $border-radius-small 0;
+      border-width: 10px;
+      height: calc(100% - 18px);
+      width: calc(50% - 9px);
+      top: 9px;
+      right: 9px;
+    }
+
+    .timeline:nth-child(even):before {
+      border-radius: 0 calc(#{$border-radius-small} + 10px) calc(#{$border-radius-small} + 10px) 0;
+      border-width: 10px;
+    }
+
+    // Manage years and icons
+    .timeline-icon {
+      font-size: 60px;
+    }
+
+    .timeline-year {
+      font-size: 26px;
+    }
+
+    .timeline-year-tag {
+      flex: 0 0 auto;
+      padding: 0 30px;
+    }
   }
-  .main-timeline .timeline:after {
-    height: calc(100% - 18px);
-    width: calc(50% - 9px);
-    border-radius: 43px 0 0 43px;
-    border-width:10px;
-    top: 9px;
-    left: 9px;
-  }
-  .main-timeline .timeline:nth-child(even):before {
-    border-radius: 0 50px 50px 0;
-    border-width: 10px;
-  }
-  .main-timeline .timeline:nth-child(even):after {
-    height: calc(100% - 18px);
-    width: calc(50% - 9px);
-    border-radius: 0 43px 43px 0;
-    border-width: 10px;
-    top: 9px;
-    right: 9px;
-  }
-  .main-timeline .timeline-icon{ font-size: 60px; }
-  .main-timeline .timeline-year{
-    font-size: 40px;
-  }
-  .main-timeline .timeline-year-tag{
-     padding: 0;
-   }
 }
-@media screen and (max-width:479px){
-  .main-timeline .timeline-icon{
-    font-size: 50px;
-    //transform:translateY(0);
-    //top: 25%;
-    //left: 10%;
-  }
-  .main-timeline .timeline-year{
-    font-size: 16px;
-    //transform:translateY(0);
-    //top: 65%;
-    //left: 9%;
-  }
-  .main-timeline .timeline-year-tag {
-    flex-direction: column;
-  }
 
-  .main-timeline .content{
-    width: 68%;
-    padding: 10px;
-  }
-  .main-timeline .title{ font-size: 18px; }
-  .main-timeline .timeline:nth-child(odd) .timeline-icon-outer{
-    //right: 10%;
-    order: -1;
-  }
-  .main-timeline .timeline:nth-child(even) .timeline-year{
-    //right: 9%;
+@media screen and (max-width: 479px) {
+
+  .main-timeline {
+    .content {
+      padding: 10px;
+    }
+
+    .timeline-year {
+      font-size: 16px;
+      margin-top: 0;
+    }
+
+    .timeline-icon {
+      font-size: 50px;
+    }
+
+    .title {
+      font-size: 18px;
+    }
   }
 }
