--- a/website/scss/index.scss
+++ b/website/scss/index.scss
@@ -1,1 +1,32 @@
 @import "imports/defaults", "imports/responsive", "imports/timeline", "imports/form", "imports/theme";
+
+#education .main-timeline .content, #experiences .main-timeline .content {
+  h3 {
+    font-weight: 800;
+  }
+
+  h4 {
+    text-transform: none;
+  }
+}
+
+
+#info .profile {
+  background-color: #fff;
+  width: 250px;
+  padding: 20px;
+  box-shadow: 0 0 10px #000;
+
+  .profile-image {
+    max-width: 300px;
+    overflow: hidden;
+    max-height: 500px;
+    height: 400px;
+    position: relative;
+
+    img {
+      height: auto;
+      width: 100%;
+    }
+  }
+}
