--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -109,5 +109,5 @@ html
         script(type="text/javascript", src="/js/education.js")
         script(type="text/javascript", src="/js/experience.js")
         script(type="text/javascript", src="/js/views/main/pageHandler.js")
-
+        script initPageHandler();
 
