--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -72,13 +72,7 @@ html
                     div(class="shadow")
                 div(class="section-body")
                     div(class="content")
-                        div(class="card-panel")
-                            div(class="panel-button button-left")
-                                i(class="fas fa-chevron-left")
-                            div(class="cards")
-                                div(class="row")
-                            div(class="panel-button button-right")
-                                i(class="fas fa-chevron-right")
+                        div(class="project-gallery")
                     div(class="shadow")
 
             section(id="contact" class="central-section section-theme-3")
@@ -108,6 +102,7 @@ html
         script(type="text/javascript", src="/js/projectCard.js")
         script(type="text/javascript", src="/js/education.js")
         script(type="text/javascript", src="/js/experience.js")
+        script(type="text/javascript", src="/js/gallery.js")
         script(type="text/javascript", src="/js/views/main/pageHandler.js")
         script initPageHandler();
 
