--- a/website/scss/imports/variables.scss
+++ b/website/scss/imports/variables.scss
@@ -1,6 +1,7 @@
 $noise-color: #dedad1;
 $section-body: #f2f2f3;
 $background-color: #d8cdbb;
+$header-background: #0000001a;
 
 $color-1: #6ca338;
 $color-2: #f3585b;
