--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -23,12 +23,56 @@ html
                     div(class="shadow")
                 div(class="section-body")
                     div(class="content")
-                        div(class="profile")
-                            div(class="profile-image")
-                                img(src="img/profile.jpg")
-                            div(class="details")
+                        div(class="profile-outer")
+                            div(class="profile")
+                                div(class="profile-image")
+                                    img(src="img/profile.jpg")
+                                div(class="details")
+                                    div(class="details-inner")
+                                        a(id="detail-birthday" class="attribute")
+                                            i(class="fas fa-birthday-cake")
+                                            span 11 january 1998
+                                        a(id="detail-email" class="attribute" href="#contact")
+                                            i(class="fas fa-envelope")
+                                            span Colingeukes@gmail.com
+                                        a(id="detail-place" class="attribute")
+                                            i(class="fas fa-map-marker-alt")
+                                            span Live in: <b>Delft, Netherlands</b>
+                                        a(id="detail-telephone" class="attribute")
+                                            i(class="fas fa-phone-alt")
+                                            span +31 (06) 55725038
 
-                        p Hello I am Colin Geukes. Nice to meet you!
+                        div(class="content-body")
+                            p I am an allround web developer. I am a senior programmer with good knowledge of front-end techniques. I love structure and order and I also stand for quality. I love spending time on fixing little details and optimizing web apps. Also I like working in a team, you'll learn faster and much more. As the saying goes: 'two heads are better than one'.
+                            p I am an allround web devnding time on fixing little details and optimizing web apps. Also I like working in a team, you'll learn faster and much more. As the saying goes: 'two heads are better than one'.
+
+                            div(class="hobbies-tag")
+                                h2 Interests & hobbies
+                            div(class="hobbies-outer")
+                                div(class="hobbies")
+                                    div(class="hobbies-row")
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-rocket")
+                                            span space
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-leaf")
+                                            span nature
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-tree")
+                                            span hiking
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-paw")
+                                            span animals
+                                    div(class="hobbies-row")
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-plane")
+                                            span travelling
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-coffee")
+                                            span coffee
+                                        div(class="hobby-icon")
+                                            i(class="fas fa-flask")
+                                            span science
                     div(class="shadow")
 
             //---- Education section
