--- a/website/scss/pageProject.scss
+++ b/website/scss/pageProject.scss
@@ -56,7 +56,7 @@ $TAG_BORDER: 2px dashed $dark;
           font-size: 20px;
           text-transform: none;
           text-decoration: underline;
-          background-color: #0000001a;
+          background-color: $header-background
         }
 
         .tag {
