--- a/website/scss/imports/variables.scss
+++ b/website/scss/imports/variables.scss
@@ -1,5 +1,6 @@
 $noise-color: #dedad1;
 $section-body: #f2f2f3;
+$section-body-accent: #e9e9ea;
 $background-color: #d8cdbb;
 $header-background: #0000001a;
 
