--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -10,12 +10,29 @@ html
         link(href="../fontawesome/css/solid.css" rel="stylesheet")
         link(rel="stylesheet", type="text/css", href="/css/index.css")
     body
+        header(id="home")
+            nav
+                div(class="nav-inner")
+                    a(class="nav-button" href="/#profile")
+                        i(class="fas fa-rocket")
+                        span contact
+                    a(class="nav-button" href="/#education")
+                        i(class="fas fa-tree")
+                        span education
+                    a(class="nav-button" href="/#experiences")
+                        i(class="fas fa-tree")
+                        span experiences
+                    a(class="nav-button" href="/#abilities")
+                        i(class="fas fa-tree")
+                        span abilities
+                    a(class="nav-button" href="/#projects")
+                        i(class="fas fa-tree")
+                        span projects
+                    a(class="nav-button" href="/#contact")
+                        i(class="fas fa-tree")
+                        span contact
         div(class="content-container")
-            header(id="home")
-                div(class="header-img")
-
-            //---- Profile section section
-            section(id="info" class="central-section")
+            section(id="profile" class="central-section")
                 div(class="section-header big-header has-shadow")
                     div(class="content")
                         h1 Colin Geukes
@@ -64,6 +81,9 @@ html
                                             i(class="fas fa-paw")
                                             span animals
                                     div(class="hobbies-row")
+                                        // Filler divs to force color scheme.
+                                        div(class="fully-hidden")
+                                        div(class="fully-hidden")
                                         div(class="hobby-icon")
                                             i(class="fas fa-plane")
                                             span travelling
@@ -86,7 +106,7 @@ html
                         div(class="main-timeline")
                     div(class="shadow")
 
-            //---- Education section
+            //---- Experience section
             section(id="experiences" class="central-section")
                 div(class="section-header has-shadow")
                     div(class="content")
