--- a/website/views/index.pug
+++ b/website/views/index.pug
@@ -14,22 +14,22 @@ html
             nav
                 div(class="nav-inner")
                     a(id="nav-profile" class="nav-button" href="/#profile")
-                        i(class="fas fa-rocket")
+                        i(class="fas fa-user-alt")
                         span contact
                     a(id="nav-education" class="nav-button" href="/#education")
-                        i(class="fas fa-tree")
+                        i(class="fas fa-graduation-cap")
                         span education
                     a(id="nav-experiences" class="nav-button" href="/#experiences")
-                        i(class="fas fa-tree")
+                        i(class="fas fa-briefcase")
                         span experiences
                     a(id="nav-abilities" class="nav-button" href="/#abilities")
-                        i(class="fas fa-tree")
+                        i(class="fas fa-dumbbell")
                         span abilities
                     a(id="nav-projects" class="nav-button" href="/#projects")
-                        i(class="fas fa-tree")
+                        i(class="fas fa-hammer")
                         span projects
                     a(id="nav-contact" class="nav-button" href="/#contact")
-                        i(class="fas fa-tree")
+                        i(class="fas fa-envelope-open-text")
                         span contact
         div(class="content-container")
             section(id="profile" class="central-section")
@@ -162,6 +162,10 @@ html
                             div(class="row-1")
                                 input(id="form-input-submit" type="submit", value="Go!")
                     div(class="shadow")
+        footer
+            div(class="footer-inner")
+                span(class="footer-tag") Working through day and night to finalize any idea.
+                span(class="copyright-tag") © Copyright #{new Date().getFullYear()} <br> Colin Geukes
         script(type="text/javascript", src="/js/skill.js")
         script(type="text/javascript", src="/js/projectCard.js")
         script(type="text/javascript", src="/js/education.js")
